# SWTDemoProjects

./: .gitignore  README.md
Appointment Scheduler/: Appointment Scheduler.sln  Appointment Scheduler.vcxproj  Appointment Scheduler.vcxproj.filters  CMakeLists.txt
Appointment Scheduler/docs/: class_diagram.mmd  srs.docx  srs.md
Appointment Scheduler/src/: Appointment.h  AppointmentRepository.cpp  AppointmentRepository.h  SchedulerConsole.cpp  SchedulerConsole.h  SchedulerService.cpp  SchedulerService.h  Utils.h  main.cpp
Command History Manager/: CMakeLists.txt  Command History Manager.sln  Command History Manager.slnx  Command History Manager.vcxproj  Command History Manager.vcxproj.filters  Command.h  CommandConsole.h  CommandService.h  main.cpp
Command History Manager/docs/: 01_initialization.mmd  02_execute.mmd  03_view.mmd  04_search.mmd  05_rerun.mmd  06_delete.mmd  class_diagram (1).mmd  srs.docx  srs.md
Command History Manager/src/: CommandConsole.cpp  CommandRepository.cpp  CommandRepository.h  CommandService.cpp  Utils.h  main.cpp
Contact Manager/: CMakeLists.txt  Contact Manager.sln  Contact Manager.vcxproj  Contact Manager.vcxproj.filters  intentional_defects.md
Contact Manager/docs/: 01_initialization.mmd  02_add.mmd  03_view.mmd  04_search.mmd  05_update.mmd  06_delete.mmd  class_diagram.mmd  srs.docx  srs.md
Contact Manager/src/: Contact.h  ContactConsole.cpp  ContactConsole.h  ContactRepository.cpp  ContactRepository.h  ContactService.cpp  ContactService.h  Utils.h  main.cpp
Employee Management/: CMakeLists.txt  Employee Management.sln  Employee Management.vcxproj  Employee Management.vcxproj.filters  EmployeeConsole.cpp  EmployeeConsole.h  EmployeeService.h  Utils.h
Employee Management/docs/: 01_initialization.mmd  02_add_employee.mmd  03_view_employees.mmd  04_search_employee.mmd  05_update_employee.mmd  class_diagram.mmd  srs.docx  srs.md
Employee Management/src/: Employee.h  EmployeeRepository.cpp  EmployeeRepository.h  EmployeeService.cpp  main.cpp
Expense Tracker/: CMakeLists.txt  Expense Tracker.sln  Expense Tracker.vcxproj  Expense Tracker.vcxproj.filters  ExpenseConsole.h  ExpenseRepository.cpp  ExpenseRepository.h  ExpenseService.h  main.cpp
Expense Tracker/docs/: 01_initialization.mmd  02_add_expense.mmd  03_view_expenses.mmd  04_filter_by_category.mmd  05_edit_expense.mmd  class_diagram.mmd  srs.docx  srs.md
Expense Tracker/src/: Expense.h  ExpenseConsole.cpp  ExpenseService.cpp  Utils.h
Hospital Management System/: CMakeLists.txt  Hospital Management System.sln  Hospital Management System.vcxproj  Hospital Management System.vcxproj.filters  HospitalConsole.cpp  HospitalConsole.h  HospitalRepository.h  HospitalService.cpp  main.cpp  packages.config  pch.h
Hospital Management System/docs/: 01_initialization.mmd  02_register_patient.mmd  03_schedule_appointment.mmd  04_view_patient_records.mmd  05_update_patient_information.mmd  06_cancel_appointment.mmd  hospital_class_diagram.mmd  hospital_sequence_diagram.mmd  srs.docx  srs.md
Hospital Management System/src/: Appointment.h  HospitalRepository.cpp  HospitalService.h  Patient.h
Hotel Management System/: CMakeLists.txt  Hotel Management System.sln  Hotel Management System.vcxproj  Hotel Management System.vcxproj.filters  HotelConsole.cpp  HotelConsole.h  HotelRepository.h  HotelService.cpp  Reservation.h  Room.h  hotel.json  main.cpp
Hotel Management System/docs/: 01_initialization.mmd  02_book_room.mmd  03_check_in_guest.mmd  04_check_out_guest.mmd  05_cancel_reservation.mmd  06_view_room_availability.mmd  07_exit.mmd  hotel_class_diagram.mmd  hotel_sequence_diagram.mmd  srs.docx  srs.md
Hotel Management System/src/: HotelRepository.cpp  HotelService.h
Inventory Management System/: CMakeLists.txt  Inventory Management System.sln  Inventory Management System.vcxproj  Inventory Management System.vcxproj.filters  InventoryRepository.cpp  InventoryRepository.h  main.cpp
Inventory Management System/docs/: 01_initialization.mmd  02_add_product.mmd  (+9 more)
Quiz System/: CMakeLists.txt  Quiz System.sln  Quiz System.vcxproj  Quiz System.vcxproj.filters
Student Grade Manager/: CMakeLists.txt  GradeConsole.cpp  GradeRepository.h  GradeService.cpp  Student Grade Manager.sln  Student Grade Manager.vcxproj  Student Grade Manager.vcxproj.filters  main.cpp
TodoList/: CMakeLists.txt  Task.h  TaskRepository.h  TaskService.cpp  TaskService.h  TodoList.sln  TodoList.slnx  TodoList.vcxproj  TodoList.vcxproj.filters  main.cpp
(+113 files in other folders)
